# Benchmark

./: .gitignore  CMakeLists.txt  README.md
include/: benchmark.hpp  mark.hpp  thread_clock.hpp
sample/: bench_function.cpp  bench_method.cpp  bench_void_function.cpp  lipsum.txt  probe_method.cpp
test/: main.cpp
